Update project files

--- a/index.html
+++ b/index.html
@@ -3,14 +3,10 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>CampusConnect</title>
-    <!-- CSS is now imported via main.jsx, which handles Tailwind. -->
+    <title>ChatConnect</title>
   </head>
   <body>
-    <!-- This is the root element where the React application will be mounted. -->
     <div id="root"></div>
-    <!-- This script tag imports the main JavaScript entry point for the React application.
-         The '/src/main.jsx' path is relative to the project root, which Vite handles. -->
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
